(CI): Fix prefix
Signed-off-by: Daniel Silverstone <dsilvers@digital-scurf.org>

--- a/dendron.yml
+++ b/dendron.yml
@@ -86,7 +86,7 @@ publishing:
         - root
     writeStubs: false
     siteRootDir: docs
-    siteUrl: https://kinnison.github.io
+    siteUrl: https://kinnison.github.io/external-brain
     assetsPrefix: /external-brain
     seo:
         title: External brain
