(chore): Try tweaking to publish example note
Signed-off-by: Daniel Silverstone <dsilvers@digital-scurf.org>

--- a/dendron.yml
+++ b/dendron.yml
@@ -84,6 +84,7 @@ publishing:
     copyAssets: true
     siteHierarchies:
         - root
+        - example
     writeStubs: false
     siteRootDir: docs
     siteUrl: https://kinnison.github.io/external-brain
